add support to send to adeus supabase function

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 HUGGINGFACE_ACCESS_TOKEN="HUGGINGFACE_ACCESS_TOKEN"
+POSTGRES_URL="postgresql://<user>:<password>@<hostname>:<port>/<database>"
+SUPABASE_API_KEY="SUPABASE_API_KEY"
+SUPABASE_HTTP_URL="https://<id>.supabase.co/functions/v1/process-audio"
